##Text encoding: utf-8

2005-11-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: changed version to 0.5.3 (post release version bump).
	* mozilla-plugin/Makefile.am: fix AM_CXXFLAGS.

2005-11-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/chemistry.cc: made some work related to ionization energies
	and electron affinities.
	* gcu/chemistry.h: ditto.
	* gcu/element.cc: ditto.
	* gcu/element.h: ditto.
	* glade/eltpage.glade: hide isotopes page for now.
	* mozilla-plugin/Makefile.am: fix make install.

2005-11-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/elecprops.xml.in: added ionization energies and electron
	affinities.
	* gcu/gtkchem3dviewer.cc: (gtk_chem3d_viewer_set_uri_with_mime_type):
	new.
	* gcu/gtkchem3dviewer.h: ditto.
	* mozilla-plugin/chem-viewer.cc: make things work.

2005-11-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add one more test for goffice.
	* mozilla-plugin/Makefile.am: add chem-viewer program.
	* mozilla-plugin/chem-viewer.cc: new viewer for the mozilla plugin.
	* mozilla-plugin/moz-plugin.c: (ChemNew), (ChemDestroy),
	(ChemSetWindow), (ChemNewStream), (ChemPrint), (ChemStreamAsFile),
	(NP_Initialize), (NP_Shutdown): implemented.
	* programs/gchemcalc.cc: take goffice api change into account.
	* programs/gchemtable-curve.cc: ditto.

2005-11-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: add datadir arg to constructor and fixed various
	issues related to help files.
	* gcu/application.h: ditto.
	* gcu/bond.cc: fixed loading (for GChemPaint).
	* gcu/chemistry.cc: implemented gcu_value_get_string.
	* gcu/chemistry.h: Add MAX_ELT constant.
	* gcu/element.cc: enhanced internationalization.
	* gcu/gtkperiodic.h: fixed a typo in docs.
	* glade/Makefile.am: add curve.glade.
	* glade/curve.glade: glade file for curve display windows in gchemtable.
	* glade/eltpage.glade: use a GtkWindow instead of a GtkDialog, and display
	Pauling electronegativity for the element.